inseriti primi dati js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Biglietto treno generatore</title>
 </head>
 <body>
+
+  <p id="risultato"></p>
   <script src="script/script.js" charset="utf-8"></script>
 </body>
 </html>
