aggiunte img e animazioni

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   <title>Biglietto treno generatore</title>
 </head>
 <body>
-
-  <p id="risultato"></p>
+  <div class="container">
+    <img class="locomotiva" src="img/cartoon-train-gif-2.gif" alt="locomotiva">
+    <div class="biglietto">
+      <p id="risultato"></p>
+    </div>
+  </div>
   <script src="script/script.js" charset="utf-8"></script>
 </body>
 </html>
